<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_header_general">

        <!-- A 'parent' preference, which enables/disables child preferences (below)
             when checked/unchecked. -->
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_key_general_links_open_externally"
            android:title="@string/pref_title_links_open_externally" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_notifications">

        <!-- A 'parent' preference, which enables/disables child preferences (below)
             when checked/unchecked. -->
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_notifications_beacon_area"
            android:summary="@string/pref_summary_beacon_area"
            android:title="@string/pref_title_beacon_area" />

        <!-- Allows the user to choose a ringtone in the 'notification' category. -->
        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="@string/pref_key_notifications_beacon_area"
            android:key="@string/pref_key_notifications_ringtone"
            android:ringtoneType="notification"
            android:showSilent="true"
            android:summary="@string/pref_summary_notification_ringtone"
            android:title="@string/pref_title_ringtone" />

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/pref_header_about">

        <!--<com.abbvisor.abbvisor.settings.view.AboutPreference-->
        <!--android:title="@string/pref_title_about" />-->

        <Preference
            android:layout="@layout/preference_about"
            android:title="@string/pref_title_version" />

    </PreferenceCategory>

</PreferenceScreen>
