<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_group_1"
        android:checkableBehavior="none">
        <item
            android:id="@+id/menu_achievement"
            android:icon="@drawable/ic_assessment_orange_24dp"
            android:title="@string/action_achievements" />
        <item
            android:id="@+id/menu_characteristic"
            android:icon="@drawable/ic_dashboard_orange_24dp"
            android:title="@string/action_characteristics" />
    </group>

    <group
        android:id="@+id/menu_group_2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_settings_orange_24dp"
            android:title="@string/action_settings" />
    </group>

</menu>