<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingEnd="@dimen/margin_padding_16dp"
    android:paddingStart="@dimen/margin_padding_16dp"
    android:paddingTop="@dimen/margin_padding_16dp">

    <RelativeLayout
        android:id="@+id/place_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_padding_16dp"
        android:layout_marginStart="@dimen/margin_padding_16dp"
        android:background="@drawable/btn_nearby">

        <LinearLayout
            android:id="@+id/place_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_place_name"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/margin_padding_4dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_place_name"
                    android:textColor="@color/grey_900" />

                <TextView
                    android:id="@+id/tv_place_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_padding_16dp"
                    android:text="@string/text_place_duration"
                    android:textSize="12sp" />

            </LinearLayout>


            <TextView
                android:id="@+id/tv_place_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/text_place_distance"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_place_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/text_place_address"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_place_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/text_place_contact"
                android:textSize="12sp" />

            <RatingBar
                android:id="@+id/rating_bar"
                style="@android:style/Widget.Holo.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_4dp"
                android:isIndicator="true"
                android:numStars="5"
                android:rating="4.5"
                android:stepSize="0.1" />

        </LinearLayout>

        <com.like.LikeButton
            android:id="@+id/star_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/place_detail"
            android:layout_alignParentEnd="true"
            app:anim_scale_factor="2"
            app:circle_end_color="@color/theme_accent_2"
            app:circle_start_color="@color/theme_primary"
            app:dots_primary_color="@color/theme_accent_2"
            app:dots_secondary_color="@color/theme_accent_1"
            app:icon_size="26dp"
            app:like_drawable="@drawable/ic_star_orange_24dp"
            app:unlike_drawable="@drawable/ic_star_border_orange_24dp"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_marginEnd="@dimen/margin_padding_4dp"
        android:layout_marginStart="@dimen/margin_padding_4dp"
        android:layout_marginTop="@dimen/margin_padding_16dp"
        android:background="@color/divider" />

</LinearLayout>