<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/margin_padding_16dp"
    android:layout_marginStart="@dimen/margin_padding_16dp"
    android:orientation="vertical">

    <android.support.v4.widget.Space
        android:id="@+id/space_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_padding_16dp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/card"
        app:cardCornerRadius="@dimen/card_corner_radius_0dp"
        app:cardElevation="@dimen/card_elevation_2dp">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:src="@drawable/splashscreen"
                android:tint="@color/button_pressed"
                android:id="@+id/iv_activity"
                android:layout_width="match_parent"
                android:layout_height="@dimen/beacon_activity_image_height"
                android:layout_marginBottom="@dimen/margin_padding_8dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/tv_activity_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_padding_8dp"
                android:layout_marginEnd="@dimen/margin_padding_8dp"
                android:layout_marginStart="@dimen/margin_padding_8dp"
                android:text="@string/text_activity_name"
                android:textColor="@color/theme_text_primary_dark" />

            <TextView
                android:id="@+id/tv_activity_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_padding_8dp"
                android:layout_marginEnd="@dimen/margin_padding_8dp"
                android:layout_marginStart="@dimen/margin_padding_8dp"
                android:text="@string/text_activity_date" />

            <TextView
                android:id="@+id/tv_activity_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_padding_8dp"
                android:layout_marginEnd="@dimen/margin_padding_8dp"
                android:layout_marginStart="@dimen/margin_padding_8dp"
                android:text="@string/text_beacon_opening_time" />

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_padding_8dp"
                android:layout_marginEnd="@dimen/margin_padding_8dp"
                android:layout_marginStart="@dimen/margin_padding_8dp">

                <TextView
                    android:id="@+id/tv_activity_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:text="@string/text_activity_description"
                    android:textSize="12sp" />

            </android.support.v4.widget.NestedScrollView>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v4.widget.Space
        android:id="@+id/space_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_padding_16dp" />

</LinearLayout>