<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <com.github.chrisbanes.photoview.PhotoView
            android:id="@+id/pv_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/pref_image_overlay"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_padding_16dp"
                android:layout_marginStart="@dimen/margin_padding_16dp"
                android:layout_marginTop="@dimen/margin_padding_16dp"
                android:layout_marginBottom="@dimen/margin_padding_16dp"
                android:text="@string/text_beacon_title"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_padding_16dp"
                android:layout_marginStart="@dimen/margin_padding_16dp"
                android:layout_marginBottom="@dimen/margin_padding_16dp"
                android:text="@string/text_beacon_price"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginEnd="@dimen/margin_padding_16dp"
                android:layout_marginStart="@dimen/margin_padding_16dp"
                android:layout_marginBottom="@dimen/margin_padding_16dp">

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:text="@string/text_beacon_content"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />

            </android.support.v4.widget.NestedScrollView>

        </LinearLayout>

    </RelativeLayout>
</layout>